crates/bumbledb-test-support/tests/ui/scan_escape.stderr
error: lifetime may not live long enough
 --> tests/ui/scan_escape.rs:9:31
  |
9 |     let _txn = env.read(|txn| Ok::<_, bumbledb_lmdb::Error>(txn))?;
  |                          ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'2`
  |                          |  |
  |                          |  return type of closure is Result<&'2 ReadTxn<'_>, bumbledb_lmdb::Error>
  |                          has type `&'1 ReadTxn<'_>`

error: lifetime may not live long enough
 --> tests/ui/scan_escape.rs:9:31
  |
9 |     let _txn = env.read(|txn| Ok::<_, bumbledb_lmdb::Error>(txn))?;
  |                          ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'3` must outlive `'2`
  |                          |  |
  |                          |  return type of closure is Result<&'2 ReadTxn<'_>, bumbledb_lmdb::Error>
  |                          has type `&ReadTxn<'3>`
